--- a/demo/simple-self-play/index.html
+++ b/demo/simple-self-play/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Play Chess</title>
-<script type="module" src="https://unpkg.com/chessir@latest/src/ui/index.js"></script>
+<script type="module" src="../../src/ui/index.js"></script>
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="../.common-public/all.css">
@@ -14,7 +14,7 @@
 </main>
 <script type="module">
 
-import { Game, GameUiBridge } from 'https://unpkg.com/chessir@latest/index.js';
+import { Game, GameUiBridge } from '../../index.js';
 
 const game = window.game = new Game();
 
