Fix usage of renamed GameUiBridge::beforeApplyMove -> ::beforeAddMove

--- a/demo/simple-self-play/index.html
+++ b/demo/simple-self-play/index.html
@@ -24,7 +24,7 @@ class SelfPlayGameUiBridge extends GameUiBridge {
 		return this.game.activeWhite;
 	}
 
-	async beforeApplyMove(move, curPos) {
+	async beforeAddMove(move, curPos) {
 		if (move.mut) {
 			while (true) {
 				move.mut = prompt("Mutate piece", 'Q') || '';
